# OX-squared-server

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  game.rs  http.rs  main.rs  messages.rs
