[package]
name = "OX-squared-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8"
dotenv = "0.15"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tapaculo = "1.5.0"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
